--- a/username.html
+++ b/username.html
@@ -14,7 +14,8 @@
         <h1>Coolio Cat</h1>
         <h2>Champion Mouser</h2>
         <p>Coolio Cat is a renowned champion Mouser with a sharp instinct for hunting and a keen sense of smell.</p>
-        <img src="images/cat.jpg" alt="Coolio Cat" width="200" height="200">
+        <img src="https://i.etsystatic.com/39477223/r/il/24885c/4573579720/il_fullxfull.4573579720_pvwu.jpg" 
+             alt="Coolio Cat" width="200" height="200">
     </header>
 
     <hr>
