--- a/username.html
+++ b/username.html
@@ -15,7 +15,7 @@
         <img src="https://i.etsystatic.com/39477223/r/il/24885c/4573579720/il_fullxfull.4573579720_pvwu.jpg" 
              alt="Coolio Cat" width="75" height="75">
         <h2>Champion Mouser</h2>
-        <p>Coolio Cat is a renowned champion Mouser with a sharp instinct for hunting and a keen sense of smell.</p>
+        <p>Renowned champion Mouser with a sharp instinct for hunting and a keen sense of smell.</p>
         
     </header>
 
@@ -70,3 +70,18 @@
         <h2>Skills</h2>
         <ul>
             <li>Rodent Tracking</li>
+            <li>Stealth Movements</li>
+            <li>Night Vision</li>
+            <li>Leadership</li>
+            <li>Teaching/Training Skills</li>
+        </ul>
+    </section>
+
+    <hr>
+
+    <h2>References</h2>
+
+    <blockquote cite="https://jemartra.github.io/cats_resume.html">
+    Coolio would hunt circles around me while i was free-lance mouse hunting, 
+    I realised I would take up a new career path, and now turned over to naps!
+    </blockquote>
