--- a/username.html
+++ b/username.html
@@ -85,3 +85,5 @@
     Coolio would hunt circles around me while i was free-lance mouse hunting, 
     I realised I would take up a new career path, and now turned over to naps!
     </blockquote>
+
+    <a href="https://jemartra.github.io/cats_resume.html">-Mr. Whiskers</href>
